--- a/index.html
+++ b/index.html
@@ -7,19 +7,42 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.3/css/uikit.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.3/js/uikit.min.js"></script>
     <title>Open Source Club</title>
   </head>
   <body>
-    
-      <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="images/open.png" width="30" height="30" class="d-inline-block align-center" alt="">
-        </a>
+    <!-- NavBar -->
+      <nav class="navbar navbar-dark bg-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"><img src="images/instagram.png"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="images/github.png"></a>
+            </li>
+        </ul>
         <span class="navbar-text">
           The Open Source Club
         </span>
       </nav>
+    <!-- NavBar Ends -->
+    <!-- Cover -->
+   <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('images/code.jpg');">
+    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+        <h1 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;">The Open Source Club</h1>
+        <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">Connected we grow,<br>Divided we Fall.</p>
+    </div>
+</div>
+   <!-- Cover Ends -->
+   
+   <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Why OSC ?</h1>
+    <p class="lead">Behind any great open source software there’s a huge and tight community aimed to make it even more popular, reliable and flexible. And when a lot of people unite to make a particular product, something really great happens — the synergy.</p>
+  </div>
+</div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
