adding new logo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Cover -->
    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top" style="background-image: url('images/code.jpg');">
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+        <h1 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;"><img src="images/osc new.png"style=" width: 200px;"></h1>
         <h1 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;">The Open Source Club</h1>
         <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">Connected we grow,<br>Divided we Fall.</p>
     </div>
